--- a/project2/src/main/webapp/resources/workInProgress.html
+++ b/project2/src/main/webapp/resources/workInProgress.html
@@ -46,7 +46,15 @@ hr {
 
 <div class="bgimg">
   <div class="topleft">
-    <p></p>
+    <p>
+    <!-- ritorno al index -->
+     <div class="span4">
+       <div class="logo" style>
+         <a href="/Project2/"><img src="../img/logo.png" alt="" class="logo" style="width: 134px" /></a>
+       </div>
+     </div>
+    
+    </p>
   </div>
   <div class="middle">
     <h1>COMING SOON</h1>
