ALESSIO: fixati path relativi

--- a/project2/src/main/webapp/resources/workInProgress.html
+++ b/project2/src/main/webapp/resources/workInProgress.html
@@ -50,7 +50,7 @@ hr {
     <!-- ritorno al index -->
      <div class="span4">
        <div class="logo" style>
-         <a href="/Project2/"><img src="../img/logo.png" alt="" class="logo" style="width: 134px" /></a>
+         <a href="../"><img src="../img/logo.png" alt="" class="logo" style="width: 134px" /></a>
        </div>
      </div>
     
