--- a/project2/src/main/webapp/resources/about.html
+++ b/project2/src/main/webapp/resources/about.html
@@ -166,7 +166,7 @@
             <div class="row">
             <div class="span4">
               <div class="logo">
-                <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
+                <a href="./"><img src="img/logo.png" alt="" class="logo" /></a>
               </div>
             </div>
             </div>
